app-of-apps/web-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-app
  labels:
    name: web-app
    project: web-app
    managed-by: backstage-template
    created-by: backstage
  annotations:
    backstage.io/project-name: "web-app"
spec: {}
