app-of-apps/web-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendapp
  namespace: web-app
  labels:
    app: frontendapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontendapp
  template:
    metadata:
      labels:
        app: frontendapp
    spec:
      containers:
      - name: frontendapp
        image: europe-west1-docker.pkg.dev/appointy-global/common/frontendapp:v5:v5
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
