app-of-apps/web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendapp
  namespace: web-app
  labels:
    app: frontendapp
spec:
  selector:
    app: frontendapp
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
