app-of-apps/web-app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontendapp
  namespace: web-app
spec:
  hosts:
  - frontendapp.idp.appointy.com
  gateways:
  - istio-system/gateway
  http:
  - match:
    - uri:
        prefix: /
  - route:
    - destination:
        host: frontendapp
        port:
          number: 80
